[project]
name = "brazilian-nut-wrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "brazilian_nut_wrapper", from = "src"}
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
